style.css
@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap");

body {
  height: 100vh;
  background-color: red;
  font-family: "Mulish", sans-serif;
}

.fa-reddit {
  color: red;
}

input.form-control:focus {
  box-shadow: none !important;
  -moz-box-shadow: none !important;
  -webkit-box-shadow: none !important;
  border: 1px solid #ced4da;
  outline: none;
}
input[type="text"] {
  box-shadow: none !important;
  -moz-box-shadow: none !important;
  -webkit-box-shadow: none !important;
  border: 1px solid #ced4da;
  outline: none;
}

#Mainbar {
  margin: 20px auto;
  width: 900px;
}
#infoReddit {
  background-image: url("./planets.jpg");
  padding: 0px;
}

#infoReddit > div:nth-child(1) {
  top: 70px;
  left: 10px;
  z-index: 99;
}
#votes > i {
  font-size: 20px;
}

#ContentPost > div:nth-child(3) {
}

.sub {
  background-image: url("./planets.jpg");
  width: 20px;
  height: 20px;
  border-radius: 999px;
}

.slice {
  height: 50px;
}
.slicePost {
  height: 350px;
}

@media (max-width: 604px) {
  #brand {
    display: none;
  }
}
@media (max-width: 576px) {
  .navbar > div {
    padding: 0px;
  }
  #Mainbar {
    width: 100vw;
    margin: 0px;
  }
}
@media (max-width: 768px) {
  #infoReddit {
    display: none;
  }
  #homePosts {
    padding: 0px;
    margin: 0 auto;
  }
}

